--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Stužková — video (seek click fix)</title>
+  <title>Stužková — video</title>
   <style>
     :root{
       --bg-top: #0e0a0a;
@@ -297,3 +297,4 @@
   </script>
 </body>
 </html>
+
